# Cad

./: .gitignore  .gitmodules
Project1/: Cad.sln
Project1/Project1/: CMakeLists.txt  _klodka.json  _klodka1.json  _klodka2.json  _klodka3.json  _klodka4.json  klodkaNaprawiona.json  klodkaNaprawionaOst.json  klodkaNaprawionaPodniesionyHandle.json  wymianaBasaRaczejDoKosza.json
Project1/Project1/Paths2/pathsFinal/: __0.f12  r6.f12
Project1/Project1/Paths2/poPoprawkach/: 1.k16  2.f12  3.k08
Project1/Project1/Paths2/podwyzszona/: 1.k16  2.f12  3.k08
Project1/Project1/saves/: 10x10.json  case1.json  case11  case2.json  case3.json  case4.json  case5.json  case6.json  case7  case8.json  gregory.json  gregory_test.json  klodka1.json  klodka2.json  klodka3  klodka4.json  klodka5.json  klodka6.json  klodka7.json  klodkaPodstawka2.json  klodkaPostawka.json  longEdgeCase.json  maciek  powierzchnie.json  save10.json  save9.json  selfCross.json  selfCross1.json  selfCross2.json  trimCase1  trimCase2.json  trimCase3.json  trimCase4.json  trimCase5.json
Project1/Project1/saves/A/: gregory.json  model.json  save.json
Project1/Project1/src/: CMakeLists.txt  CadApp.cpp  CadApp.h  ErrorDisplayer.cpp  ErrorDisplayer.h  Indexer.h  Rotator.cpp  Rotator.h  StartScript.cpp  StartScript.h  TextureCPUAccess.cpp  TextureCPUAccess.h  main.cpp
Project1/Project1/src/Debuger/: Debuger.cpp  Debuger.h
Project1/Project1/src/ElipsoidFiles/: AdaptiveGui.cpp  AdaptiveGui.h  AdaptiveRendering.cpp  AdaptiveRendering.h  Elipse.cpp  Elipse.h  ElipseGui.cpp  ElipseGui.h
Project1/Project1/src/ElipsoidFiles/shaders/: fragmentShader.frag
Project1/Project1/src/EventHandlers/: CameraMainPositions.cpp  CameraMainPositions.h  CameraMovement.cpp  CameraMovement.h  ClickSelection.cpp  ClickSelection.h  Collapse.cpp  Collapse.h  EventHanlderInterfaces.h  ObjectFactory.cpp  ObjectFactory.h  RectSelection.cpp  RectSelection.h  SelectedMovement.cpp  SelectedMovement.h
Project1/Project1/src/Geometry/: BezierCurve.cpp  BezierCurve.h  BrokenLine.cpp  BrokenLine.h  Elipse.cpp  Elipse.h  Intersection.cpp  Intersection.h  Point.cpp  Point.h  Torus.cpp  Torus.h  TorusGeometry.cpp  TorusGeometry.h
Project1/Project1/src/Geometry/Curves/: BezierCurve.cpp  BezierCurve.h  CurveC0.cpp  CurveC0.h  CurveC2.cpp  CurveC2.h  InterpolationCurve.cpp  InterpolationCurve.h  UVEnvelope.h
Project1/Project1/src/Geometry/Surfaces/: GregoryPatch.cpp  GregoryPatch.h  SurfaceC0.cpp  SurfaceC0.h  SurfaceC2.cpp  SurfaceC2.h  SurfaceCreator.cpp  SurfaceCreator.h  SurfaceShift.cpp  SurfaceShift.h
Project1/Project1/src/Math/: BernsteinPolynomial.cpp  BernsteinPolynomial.h  CadMath.cpp  CadMath.h  Matrix4x4.cpp  Matrix4x4.h  Vector4.cpp  Vector4.h
Project1/Project1/src/Milling/: MillingGui.cpp  MillingGui.h  MillingPathCreator.cpp  MillingPathCreator.h  SceneHeightMapRenderer.cpp  SceneHeightMapRenderer.h
Project1/Project1/src/Rendering/: AdaptiveRendering.cpp  AdaptiveRendering.h  AnaglyphCamera.h  AnaglyphRenderer.cpp  AnaglyphRenderer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  ProceduralTexture.h  RGB.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  SceneObject.h  Shader.cpp  Shader.h  TextureRenderer.cpp  TextureRenderer.h  Transform.cpp  Transform.h  VariableManager.h  Window.cpp  Window.h
Project1/Project1/src/Rendering/Anaglyph/: AnaglyphCamera.cpp  AnaglyphCamera.h  AnaglyphRenderer.cpp  AnaglyphRenderer.h
Project1/Project1/src/Scene/: BezierCurve.cpp  BezierCurve.h  Center.cpp  Center.h  Cursor.cpp  Cursor.h  Curve.cpp  Curve.h  CurveC0.cpp  CurveC0.h  CurveC2.cpp  CurveC2.h  ISceneElement.h  InterpolationCurve.cpp  InterpolationCurve.h  Point.cpp  Point.h  Scene.cpp  Scene.h  TesselationTest.cpp  TesselationTest.h  Torus.cpp  Torus.h
Project1/Project1/src/Shaders/: 2dShader.vert  baseColor.frag  fragmentShader.frag  height.frag  position.vert  test.tesc  test.tese  texture.frag  texture.vert  torus.vert  uv.frag  vertexShader.vert
Project1/Project1/src/Shaders/DeBoor/: deboor.tesc  deboor.tese
Project1/Project1/src/Shaders/HeightMap/: heightMap.frag  heightMap.tesc  heightMap.tese  wall.tesc  wall.tese
Project1/Project1/src/Shaders/MillingPath/: errorCirc.frag  errorRect.frag  milledAreaCirc.frag  milledAreaRect.frag  millingPath.frag  millingPath.vert  millingPathCirc.frag  millingPathCirc.vert
Project1/Project1/src/Shaders/Phong/: phong.frag  phong.vert
Project1/Project1/src/Shaders/ScreenTexture/: screenTexture.vert  texture.frag
Project1/Project1/src/Shaders/Surface/: gregory.tesc  gregory.tese  surfaceC0.tesc  surfaceC0.tese  surfaceC0.vert  surfaceC2.tesc  surfaceC2.tese  surfaceC2solid.tesc  surfaceC2solid.tese  surfaceChain.tesc  surfaceChain.tese
Project1/Project1/src/Simulations/: ISimulation.h  Simulator.cpp  Simulator.h
Project1/Project1/src/Simulations/MillingMachine/: Cutter.cpp  Cutter.h  MaterialCube.cpp  MaterialCube.h  MillingErrorHandler.cpp  MillingErrorHandler.h  MillingHeightMapRenderer.cpp  MillingHeightMapRenderer.h  MillingMachineSimulation.cpp  MillingMachineSimulation.h  MillingPath.cpp  MillingPath.h  MillingPathVisualizer.cpp  MillingPathVisualizer.h
Project1/Project1/src/UI/: AdaptiveGui.h  ElipseGui.cpp  ElipseGui.h  FileLoader.cpp  FileLoader.h  IGui.h  MainMenu.cpp  MainMenu.h  SceneVector.cpp  SceneVector.h
Project1/Project1/src/interfaces/: IClickable.h  ICustomMove.h  IErrorHandler.h  IGui.h  IMeshOwner.h  IPointOwner.h  IRenderable.h  ISceneElement.h  ISceneModifier.h  ISceneTracker.h  ISelfControl.h  ISerializable.h  ITransformable.h  IUVSurface.h
